2005-03-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.h: Moved translate_key_event() to private field.

2005-03-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.cpp: Fixed odd behavior on symbols mode.
	* po/ja.po: Updated.

2005-03-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.cpp: Removed some nosense modes.

2005-03-22 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine.cpp,
	  src/canna_jrkanji.cpp, src/canna_jrkanji.h:
	Added some properties to change input mode.

2005-03-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.cpp, src/canna_jrkanji.h,
	  src/scim_canna_imengine.cpp:
	Create a canna context per each CannaInstance.
	Show property label.

2005-03-20 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine.cpp: Register empty PropertyList to clear
	tollbar.

2005-03-20 Takuro Ashie <ashie@homa.ne.jp>

	* Initial import into CVS.