@@ -20,6 +20,19 @@
 #ifndef __SCIM_CANNA_PREFS_H__
 #define __SCIM_CANNA_PREFS_H__
 
+#define Uses_SCIM_UTILITY
+#include <scim_utility.h>
+
+#define SCIM_CANNA_CONFIG_SPECIFY_INIT_FILE_NAME         "/IMEngine/Canna/SpecifyInitFileName"
+#define SCIM_CANNA_CONFIG_SPECIFY_SERVER_NAME            "/IMEngine/Canna/SpecifyServerName"
+#define SCIM_CANNA_CONFIG_INIT_FILE_NAME                 "/IMEngine/Canna/InitFileName"
+#define SCIM_CANNA_CONFIG_SERVER_NAME                    "/IMEngine/Canna/ServerName"
+
+#define SCIM_CANNA_CONFIG_SPECIFY_INIT_FILE_NAME_DEFAULT false
+#define SCIM_CANNA_CONFIG_SPECIFY_SERVER_NAME_DEFAULT    false
+#define SCIM_CANNA_CONFIG_INIT_FILE_NAME_DEFAULT         (scim_get_home_dir() + String("/.canna"))
+#define SCIM_CANNA_CONFIG_SERVER_NAME_DEFAULT            "localhost"
+
 #endif /* __SCIM_CANNA_PREFS_H__ */
 /*
 vi:ts=4:nowrap:ai:expandtab
